--- a/app/shared/layout/layout.less
+++ b/app/shared/layout/layout.less
@@ -2,10 +2,19 @@
 @import "./bootswatch.less";
 @import "./variables.less";
 
-body {
+@sticky-height: 100px;
+
+* {
   box-sizing: border-box;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 .main {
-  margin-top: 62px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
